# badresearch

./: .gitignore  FIX-REPORT.md  README.md  golden-eval-report.json  pyproject.toml
docs/: HOW_IT_WORKS.md  INTERFACES.md  INTERFACES_KEYLESS.md  KEYLESS_REBUILD_PLAN_OUTLINE.md  SPEC.md
docs/audit/: 2026-06-01-honesty-audit-RAW.json  2026-06-01-honesty-audit.md  2026-06-02-reaudit.md  2026-06-02-road-to-9.md
docs/benchmarks/: HEAD_TO_HEAD.md  RUNBOOK.md
docs/benchmarks/examples/: h2h_01_bad-research.md  h2h_01_competitor.md  headtohead-scorecard.json  headtohead-scorecard.md
docs/benchmarks/queries/: starter_set.json
docs/investigation/: 01_FOUNDATION.md  02_WEB_SEARCH.md  03_BROWSE_EXTRACT.md  04_NIA_STACK.md  05_DR_LOOPS.md  06_CROSSCUTTING_PACKAGING.md  07_QUALITY_FILTER.md  08_GROUNDING.md  09_SPEED_COST_CURATION.md  10_SCRAPER_SOURCING.md  11_CORPUS_SWEEP.md  12_KEYLESS_CONTENT.md  13_KEYLESS_SEARCH.md  14_KEYLESS_BROWSE.md  15_KEYLESS_RETRIEVAL.md  16_KEYLESS_LOOP.md
docs/plans/: 2026-05-26-bad-research-01-foundation.md  2026-05-26-bad-research-02-retrieval.md  2026-05-26-bad-research-03-web-search.md  2026-05-26-bad-research-04-browse.md  2026-05-26-bad-research-05-quality.md  2026-05-26-bad-research-06-grounding.md  2026-05-26-bad-research-07-funnel.md  2026-05-26-bad-research-08-pipeline.md  2026-05-26-bad-research-09-packaging.md  2026-05-27-bad-research-KR-1-removal.md  2026-05-27-bad-research-KR-2-search.md  2026-05-27-bad-research-KR-3-content.md  2026-05-27-bad-research-KR-4-browse.md  2026-05-27-bad-research-KR-5-retrieval.md  2026-05-27-bad-research-KR-6-loop-rewire.md  2026-05-27-bad-research-KR-7-calibration-plan.md  2026-05-27-bad-research-KR-7-packaging.md
docs/superpowers/investigation/: codex-ondevice-checklist.md  codex-port-spike.md
docs/superpowers/plans/: 2026-05-29-bad-research-super-skill.md  2026-05-29-codex-port.md  2026-05-30-bad-research-fast-mode.md  2026-05-30-bad-research-ultrafast-mode.md
docs/superpowers/specs/: 2026-05-29-codex-port-design.md  (+4 more)
src/bad_research/: cli.py  config.py  pipeline.py  providers.py
tests/: conftest.py  test_providers.py
tests/test_browse/: conftest.py  test_agent_browser_browse.py  test_agent_browser_cli.py  test_agent_browser_snapshot.py  test_aql.py  test_aql_resolver.py  test_base.py  test_browse_browserbase.py  test_browse_browseruse.py  test_cache.py  test_extract_agentql.py  test_extract_llm.py  test_extract_stagehand.py  test_fetcher_hook.py  test_graceful_degradation.py  test_ladder.py
tests/test_calibrate/: conftest.py  test_baselines.py  test_calibrate_cmd.py  test_cost.py  test_gate_cmd.py  test_golden.py  test_harness.py  test_headtohead.py  test_headtohead_hostjudge.py  test_judge.py  test_judge_rails.py  test_runner_bridge.py
tests/test_cli/: test_cli_subcommands.py  test_export_and_grounding_surface.py  test_fetch_cmd.py  test_keyless_rewire.py  test_vault_cmds.py
tests/test_config/: test_config.py
tests/test_content/: conftest.py  test_cache_fetch.py  test_classify_source.py  test_highlights.py  test_init_shadow.py  test_keyless_guard.py  test_llm_clean.py  test_main_content.py  test_markdown.py  test_metadata.py  test_pdf.py  test_pdf_render.py  test_render_ssrf.py  test_sources_cli.py  test_sources_html.py  test_sources_ssrf.py  test_strip_boilerplate.py
tests/test_core/: test_agent_docs_commands.py  test_db_body_lines.py  test_ssrf.py  test_ssrf_predicate.py
tests/test_embed/: test_base.py  test_bge_local.py  test_cohere.py
tests/test_export/: test_html.py  test_refs.py
tests/test_funnel/: conftest.py  test_async.py  test_canonical.py  test_config.py  test_dedup.py  test_fanout.py  test_filter.py  test_orchestrator.py  test_rank.py  test_read.py  test_recency.py  test_recency_gate.py
tests/test_grounding/: conftest.py  test_anchors.py  test_confidence_band.py  test_extract.py  test_figure_anchor.py  test_gate.py  test_host_judge.py  test_nli.py  test_public_api.py  test_recall_harness.py  test_regression_a9.py  test_render.py  test_seam.py  test_verifier.py
tests/test_install/: test_agent_docs_commands.py  test_codex_install.py  test_codex_translate.py  test_install_cli_e2e.py  test_install_global.py  test_install_project.py  test_step_list.py
tests/test_llm/: test_anthropic.py  test_base.py
tests/test_mcp/: test_mcp_tools.py  test_note_find.py
tests/test_packaging/: test_base_leanness.py  test_doctor.py  test_install_idempotent.py  test_live_skip.py  test_pyproject.py  test_pytest_config.py  test_wheel_build.py
tests/test_pipeline/: test_build_real.py  test_run_query.py
tests/test_quality/: conftest.py  test_consistency.py  test_content_filter.py  test_dedup.py  test_epistemic_penalty.py  test_grader.py  test_injection.py  test_pipeline_e2e.py  test_prefilter.py  test_public_api.py  test_rank.py  test_recitation.py  test_relevance.py  test_sources.py
tests/test_retrieval/: conftest.py  test_anchors.py  test_base.py  test_cache.py  test_chunker.py  test_chunker_code.py  test_config.py  test_constants.py  test_engine.py  test_fts_chunks.py  test_fusion.py  test_import_keyless.py  test_no_keys_invariant.py  test_reflections.py  test_rerank.py  test_schema_migration.py  test_store.py
tests/test_skills/: conftest.py  test_agentic_fast_skill.py  test_all_skills_valid.py  test_citation_verifier_skill.py  test_clarify_skill.py  test_decompose_skill.py  test_delegation_contract.py  test_entry_skill.py  test_fast_skill.py  test_fresh_review_skill.py  test_grader_skill.py  test_light_critic.py  test_modified_stages.py  test_no_dead_artifact_reads.py  test_plan_gate.py  test_router.py  test_router_effort.py  test_router_modality.py  test_router_shape.py  test_router_skill.py  test_router_tiering.py  test_skill_a_prose.py  test_ultrafast_skill.py  test_validate_self.py  validate.py
tests/test_web/: test_exa_provider.py  test_provider_factory.py  test_recency_filter.py  test_search_live.py  test_search_loop.py  test_search_providers.py  test_search_rank.py  test_search_rerank.py  test_search_route.py  test_search_verticals.py  test_web_search_query.py
(+144 files in other folders)
