[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bad-research"
version = "0.1.0"
description = "michael jackson bad — a deep-research agent that's bad (i.e. the best). A fork-and-enhance of hyperresearch."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
authors = [{name = "Bad Research"}]
keywords = ["research", "deep-research", "llm", "agent", "claude", "retrieval", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "platformdirs>=4.0",
    "Crawl4AI>=0.4",
    "pymupdf>=1.24",
    "httpx>=0.27",
    "anthropic>=0.40",
    "lancedb>=0.13",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.7",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
cohere = ["cohere>=5.0"]
exa = ["exa-py>=2.0.0"]
mcp = ["mcp>=1.6"]
rerank = ["cohere>=5.13"]
rerank-local = ["FlagEmbedding>=1.3"]
web = ["exa-py>=2.0.0"]            # tavily/sonar/searxng/firecrawl need only httpx (core dep)
crawl4ai = ["crawl4ai>=0.4"]                       # Tier 1 (JS render)
browser-use = ["browser-use>=0.1"]                 # Tier 3 self-host agentic browse
browserbase = ["stagehand>=0.1"]                   # Tier 3b anti-bot (paid; key-gated)
browse = ["crawl4ai>=0.4", "browser-use>=0.1"]     # the self-host ladder, no paid keys
quality = ["langdetect>=1.0.9"]                    # Stage-2 language gate (graceful when absent)
all = ["bad-research[cohere,exa,mcp,web,browse,quality]"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "respx>=0.21",
]

[project.scripts]
bad = "bad_research.cli:app"
badr = "bad_research.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bad_research"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "B904", "E402", "N817", "N818", "SIM105", "RUF012"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
